<resources>
    <string name="app_name">Course_Booking</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signUp">Click Here to Sign Up</string>
    <string name="usernameForm">Enter Username</string>
    <string name="passwordForm">Enter Password</string>
    <string name="signUpBtn">Sign Up</string>'
    <string name="returnLogin">Click Here to return to Login Screen</string>
    <string name="txtAccType">Select Account Type</string>
    <string name="student">Student</string>
    <string name="instructor">Instructor</string>
    <string name="create">CREATE</string>
    <string name="edit">Click here to Edit courses</string>
    <string name="deleteCourse">DELETE</string>
    <string name="deleteAccount">DELETE</string>
    <string name="modify">MODIFY</string>
    <string name="logout">Log Out</string>
    <string name="viewAll">VIEW ALL</string>
    <string name="search">SEARCH</string>
    <string name="info">You can enter the crsCode to: check if the course has assigned instructor, assign yourself as the instructor or modify a course you are assigned to.</string>
    <string name="checkAssigned">CHECK ASSIGNED</string>
    <string name="btn_assign">ASSIGN</string>
    <string name="addOrEdit">You can add or edit the course details</string>
    <string name="add">ADD</string>
    <string name="edit_details">EDIT</string>
    <string name="unAssign">Click here if you want to un-assign</string>
    <string name="modify_assigned_course">MODIFY ASSIGNED COURSE</string>
    <string name="addDescriptionAndCapacity">ADD DESCRIPTION AND CAPACITY</string>
    <string name="editDescriptionAndCapacity">EDIT DESCRIPTION AND CAPACITY</string>
    <string name="addSession">ADD SESSION</string>
    <string name="deleteSession">DELETE SESSION</string>
    <string name="enroll">Enroll</string>
    <string name="unenroll">Unenroll</string>
    <string name="viewEnrolled">View Enrolled Courses</string>
    <string name="viewStudents">View Enrolled Students</string>
</resources>