<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeInstructor"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Welcome ‘firstname/username’! You are logged in as instructor." />

        <Button
            android:id="@+id/btn_viewAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll" />

        <EditText
            android:id="@+id/et_crsCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter the crsCode"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_crsName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter the crsName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <ListView
            android:id="@+id/productListView"
            android:layout_width="370dp"
            android:layout_height="175dp"
            android:layout_marginTop="10dp" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info" />
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btn_checkAssigned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/checkAssigned"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/btn_assign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_assign"
                android:layout_margin="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_modify_assigned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modify_assigned_course"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/btnLogoutInstructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:layout_margin="5dp"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_viewStudents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/viewStudents" />
        </TableRow>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
