<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/welcomeStudent"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="Welcome ‘firstname/username’! You are logged in as student." />

        <Button
            android:id="@+id/btn_viewAll2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewAll" />

        <EditText
            android:id="@+id/et_crsCode2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter the crsCode"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_crsName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter the crsName"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter a Day (eg. Friday)"
            android:inputType="textPersonName"
            android:minHeight="48dp"/>

        <Button
            android:id="@+id/btn_search2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />

        <ListView
            android:id="@+id/productListView"
            android:layout_width="370dp"
            android:layout_height="225dp"
            android:layout_marginTop="10dp" >

        </ListView>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_enroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/enroll" />

            <Button
                android:id="@+id/btn_unenroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/unenroll" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btn_viewEnrolled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewEnrolled" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnLogoutStudent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_margin="5dp"/>
        </TableRow>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>