<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrEditCourseDetails">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="381dp"
        android:layout_height="757dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addOrEdit"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/crsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter course description"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/crsCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter course student capacity (e.g. 4)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_addDesAndCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addDescriptionAndCapacity" />

        <Button
            android:id="@+id/btn_editDesAndCap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editDescriptionAndCapacity" />

        <EditText
            android:id="@+id/crsDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter course day (e.g. Monday)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/startHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter startHour (0-23)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/startMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter startMinute (00-59)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/endHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter endHour (0-23)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/endMinute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Enter endMinute (00-59)"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_addSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addSession" />

        <Button
            android:id="@+id/btn_deleteSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deleteSession" />

        <TextView
            android:id="@+id/tv_unAssign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Click here if you want un-assign" />

        <TextView
            android:id="@+id/tv_backToInstructorActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Click here to go back to InstructorActivity page" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>